--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -7,7 +7,7 @@ block title
   title Máy ảnh 1DX Mark III 
 
 block content
-  .container-xl.breadcrumb-wrapper
+  .breadcrumb-wrapper.container-xl
     ul.breadcrumb
       li.breadcrumb-item
         a(href='index.html') Trang chủ
@@ -16,3 +16,280 @@ block content
       li.breadcrumb-item
         a(href='dslr-hub.html') Máy ảnh DSLR
       li.breadcrumb-item.active Canon EOS 1DX Mark III
+
+  .details__wrapper.container-xl 
+
+    h1.details__header.w-100.text-left Máy ảnh DSLR 
+      span.logo-canon Canon 
+      | 1DX Mark III 
+
+    section.details__img-area
+      .details__main-img
+      .details__sub-img-area
+        img.details__sub-img(src="img/img--details/detail__main-img-1.jpg", alt="")  
+        img.details__sub-img(src="img/img--details/detail__sub-img-1.jpg", alt="") 
+        img.details__sub-img(src="img/img--details/detail__sub-img-2.jpg", alt="") 
+        img.details__sub-img(src="img/img--details/detail__sub-img-3.jpg", alt="") 
+        img.details__sub-img(src="img/img--details/detail__sub-img-4.jpg", alt="")
+        img.details__sub-img(src="img/img--details/detail__sub-img-5.jpg", alt="")
+      .details__review-score
+        h2.score--user Người dùng đánh giá: 
+          span x / 5
+        h2.score--shop HALO đánh giá: 
+          span x / 5
+
+    section.details__summary
+      .summary__basic
+        h2.details__sub-header Thông tin cơ bản
+        p.summary__text
+          | Xuất xứ: Chính hãng, fullbox
+          br
+          | Độ phân giải: 20.1 MP
+          br
+          | Kích cỡ cảm biến: Full-frame
+          br
+          | Ngàm: EF Mount
+          br
+          | Bảo hành: Chính hãng 24 tháng 
+          a.text-primary.font-italic(href="#") (xem chi tiết)
+        p.summary__text Canon EOS 1D X Mark III mang đến chuẩn mực cao nhất cho dòng máy ảnh DSLR full-frame. Cho tới hiện tại, đây là chiếc máy ảnh hàng đầu và đẳng cấp nhất của Canon.
+
+        p.price 130.090.000đ
+        p.sale-text
+          span.old-price 138.090.000đ
+          span.sale-badge
+            img(src="img/img--misc/badge--sale.png", alt="")
+          span.sale-amount (Giảm 8.000.000đ)
+
+        .summary__btn-wrapper
+          button.summary__btn.btn Mua ngay      
+          button.summary__btn.btn Thêm vào giỏ hàng 
+
+        .summary__box-content 
+          h2.details__sub-header.text-left.mb-3 Hộp sản phẩm bao gồm
+          ul.box-content__list
+            li.box-content__item 1x Máy ảnh Canon EOS-1D X Mark III
+            li.box-content__item 1x pin Canon LP-E19
+            li.box-content__item 1x dock sạc Canon LC-E19
+            li.box-content__item 1x nắp ngàm EF
+            li.box-content__item 1x dây đeo Canon L7 Wide Straps cỡ XL
+
+    section.details__offers 
+    
+      .offers__gift
+        h2.details__sub-header Quà tặng (Tổng giá trị 900.000đ)
+        .gift-wrapper 
+          img.gift-img(src="img/img--details/gift-img.png", alt="")
+          img.gift-img(src="img/img--details/gift-img.png", alt="")
+          img.gift-img(src="img/img--details/gift-img.png", alt="")
+      
+      .offers__special
+        h2.details__sub-header Ưu đãi đặc biệt
+        ul.special__list
+          li.special__item Miễn phí giao hàng toàn quốc trong vòng 2 - 5 ngày
+          li.special__item Hỗ trợ dán màn hình miễn phí trọn đời sản phẩm.
+          li.special__item Miễn phí vệ sinh, khử mốc trong thời hạn bảo hành 
+          li.special__item Tặng voucher giá trị 1.000.000đ cho lần mua hàng kế tiếp
+      
+      button.offers__btn.btn Đăng ký mua trả góp lãi suất 0%
+      
+      p.offers__contact
+        | Tư vấn miền Bắc: 0397496263 (Mr. Nguyễn) 
+        br
+        | Tư vấn miền Trung: 0397496263 (Mr. Trung)  
+        br
+        | Tư vấn miền Nam: 0397496263 (Mr. Đức)  
+
+    section.details__main-info
+
+      .main-info__toggler(data-toggle="collapse" data-target="#intro")
+        span.details__sub-header Giới thiệu
+        span.main-info__toggler-indicator 
+          i.fas.fa-chevron-up
+
+      #intro.main-info__content.collapse.show
+        h3.main-info__inner-header Cảm biến mới, hệ thống hình ảnh mới
+
+        img(src="img/img--details/intro-img-1.jpg", alt="")
+
+        p Canon EOS 1D X Mark III sử dụng cảm biến hoàn toàn mới 20.1MP kết hợp với bộ xử lý hình ảnh DIGIC X mang lại chất lượng hình ảnh sắc nét ấn tượng với độ chi tiết cao nhất, giảm thiểu xác suất sai màu và hiệu ứng mới. 
+
+        img(src="img/img--details/intro-img-2.png", alt="")
+        
+        p Ngoài tốc độ ấn tượng, bộ xử lý cảm biến còn có phạm vi độ nhạy của dải ISO từ 100-102400, có thể mở rộng thành ISO 50-819200 để hỗ trợ làm việc trong nhiều điều kiện ánh sáng khác nhau. 
+
+        h3.main-info__inner-header Hệ thống lấy nét
+
+        img(src="img/img--details/intro-img-3.jpg", alt="")
+        p Canon EOS 1DX Mark III sử dụng cảm biến AF mới với khả năng tự động lấy nét chính xác qua kính ngắm, Live View và video. Thông qua kính ngắm, hệ thống AF gồm 191 điểm lấy nét nhanh và chính xác tuyệt đối không chỉ ở tốc độ mà còn đạt khả năng AF Tracking mới. Về cách nhận diện khuôn mặt, EOS-1D X Mark III hỗ trợ công nghệ Head Detection kết hợp Deep Learning và khả năng đọc, phân tích chủ thể thông qua hình dạng và màu sắc.
+
+        h3.main-info__inner-header Tốc độ đỉnh cao
+
+        img(src="img/img--details/intro-img-4.png", alt="")
+
+        p Tốc độ chụp nhanh của Burst Shooting mang đến cơ hội cao hơn cho các nhiếp ảnh gia chuyên nghiệp để ghi lại khoảnh khắc chính xác với bố cục hoàn hảo. Máy ảnh EOS-1D X Mark III có tốc độ chụp ấn tượng lên tới 16 khung hình / giây bằng kính ngắm, đồng bộ với hệ thống AF / AE mới được phát triển để đáp ứng nhanh về lấy nét tự động chính xác và kiểm soát phơi sáng trong mọi lần chụp quyết định.
+
+        h3.main-info__inner-header Thiết kế bền bỉ
+
+        img(src="img/img--details/intro-img-6.png", alt="")
+
+        p EOS-1D X Mark III được trang bị độ bền cơ chế màn trập khoảng 500.000 shot. Được thiết kế với thân máy bằng hợp kim magiê chắc chắn, có khả năng chống bụi và ẩm xung quanh các khu vực quan trọng, EOS-1D X Mark III sẵn sàng chống đỡ trong mọi nhiệm vụ.
+      
+
+      .main-info__toggler(data-toggle="collapse" data-target="#specs")
+        span.details__sub-header Thông số kỹ thuật
+        span.main-info__toggler-indicator 
+          i.fas.fa-chevron-up
+
+      #specs.main-info__content.collapse.show
+        .specs__category 
+          h3.main-info__inner-header Hình ảnh
+          .category__row
+            p.category__key Kích cỡ cảm biến
+            p.category__value Full frame BSI-CMOS (35.9 x 23.9 mm)
+          .category__row
+            p.category__key Độ Phân Giải
+            p.category__value 20.1 Megapixel
+          .category__row
+            p.category__key Kích Thước Ảnh
+            p.category__value 5472px x 3648px (Tỷ lệ ảnh 3:2)
+
+        .specs__category 
+          h3.main-info__inner-header Ánh sáng
+          .category__row
+            p.category__key ISO
+            p.category__value 100 - 102400 (Mở rộng: 50 - 819200)
+          .category__row
+            p.category__key Tốc Độ Chụp Liên Tục
+            p.category__value 20 hình/giây
+          .category__row
+            p.category__key Bù trừ sáng(EV)
+            p.category__value -5 đến +5 EV (1/3, 1/2 EV)
+
+        .specs__category 
+          h3.main-info__inner-header Video
+          .category__row
+            p.category__key Độ Phân Giải Video
+            p.category__value DCI 4K (4096 x 2160)
+          .category__row
+            p.category__key Micro
+            p.category__value 2 micro stereo (hỗ trợ micro ngoài)
+
+        .specs__category 
+          h3.main-info__inner-header Kính Ngắm / Màn Hình
+          .category__row
+            p.category__key Kích Thước Màn Hình
+            p.category__value 3.2 inch
+          .category__row
+            p.category__key Đặc Tính Màn Hình
+            p.category__value LCD cảm ứng
+          .category__row
+            p.category__key Độ Bao Phủ Kính Ngắm
+            p.category__value 100%
+
+        .specs__category 
+          h3.main-info__inner-header Kết Nối
+          .category__row
+            p.category__key Số Khe Cắm Thẻ Nhớ
+            p.category__value 2 khe (hoạt động đồng thời)
+          .category__row
+            p.category__key Jack Cắm
+            p.category__value USB Type-C (USB 3.1), HDMI C (Mini), Canon N3, 3.5mm Headphone, 3.5mm Microphone, PC Sync Socket, RJ45
+          .category__row
+            p.category__key Kết Nối Không Dây
+            p.category__value Wi-Fi/ Bluetooth
+          .category__row
+            p.category__key GPS
+            p.category__value Có
+
+        .specs__category 
+          h3.main-info__inner-header Pin / Kích Thước / Trọng Lượng
+          .category__row
+            p.category__key Pin
+            p.category__value 1 x LP-E19 Lithium-Ion, 2750 mAh (Trung bình 2850 Shots)
+          .category__row
+            p.category__key Kích Thước
+            p.category__value 158 x 167.6 x 82.6 mm (cao x ngang x dày)
+          .category__row
+            p.category__key Trọng lượng
+            p.category__value 1400 g (bao gồm pin, thẻ nhớ)
+
+      .main-info__toggler(data-toggle="collapse" data-target="#review")
+        span.details__sub-header Đánh giá của HALO
+        span.main-info__toggler-indicator 
+          i.fas.fa-chevron-up
+
+      #review.main-info__content.collapse.show
+        img.review__img.d-block(src="img/img--details/review-img.webp", alt="")
+        .review__content
+          h1.review__header Canon 1DX Mark III: Vua của các vị vua
+          .review__sub-header 
+            span.author Trung Đức
+            span.time 
+              i.far.fa-clock
+              | 01/01/2021
+
+          p.review__sub-preview Thị trường có rất nhiều máy ảnh DSLR từ các hãng lớn như Nikon, Canon, Sony, ...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.
+          button.review__btn.btn--dark.btn Xem chi tiết
+
+      .main-info__toggler(data-toggle="collapse" data-target="#sample")
+        span.details__sub-header Ảnh chụp mẫu 
+        span.main-info__toggler-indicator 
+          i.fas.fa-chevron-up
+
+      #sample.main-info__content.collapse.show
+        .card-columns 
+          .card
+            img(src="img/img--details/sample-1.png", alt="")
+          .card
+            img(src="img/img--details/sample-2.png", alt="")
+          .card
+            img(src="img/img--details/sample-3.png", alt="")
+          .card
+            img(src="img/img--details/sample-1.png", alt="")
+          .card
+            img(src="img/img--details/sample-2.png", alt="")
+          .card
+            img(src="img/img--details/sample-3.png", alt="")
+          .card
+            img(src="img/img--details/sample-1.png", alt="") 
+
+
+      .main-info__toggler(data-toggle="collapse" data-target="#comment")
+        span.details__sub-header Bình luận
+        span.main-info__toggler-indicator 
+          i.fas.fa-chevron-up
+
+      #comment.main-info__content.collapse.show
+        form.comment__form(action="")
+          input.comment__input(type="text" placeholder="Nhập bình luận (cần đăng nhập)")
+          button.comment__btn.btn(type="submit")
+
+        .comment__old-comment 
+
+          .old-comment__row 
+            img.old-commen_avatar(src="img/img--details/avatar.png", alt="") 
+            .old-comment__content
+              h3.main-info__inner-header Đánh giá
+                span x / 5
+              p.username Mr. XY 
+              p.comment-text Lorem ipsum dolor sit amet, consectetdolornt occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit, unt in culpa qui officia deserunt mollit anim id est laborum.
+
+          .old-comment__row 
+            img.old-commen_avatar(src="img/img--details/avatar.png", alt="") 
+            .old-comment__content
+              h3.main-info__inner-header Đánh giá
+                span x / 5
+              p.username Mr. XY 
+              p.comment-text Lorem ipsum dolor sit amet, consectetdolornt occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit, unt in culpa qui officia deserunt mollit anim id est laborum.
+
+          button.comment__btn.btn.btn--dark Xem thêm
+
+    section.details__recommend
+      h2.details__sub-header Sản phẩm đi kèm khuyên dùng
+
+      .recommend__wrapper
+        include parts/card.pug
+        include parts/card.pug
+
+
