--- a/halo/css/details.css
+++ b/halo/css/details.css
@@ -53,14 +53,6 @@ section {
   margin: 10px;
 }
 
-/* .details__sub-img:nth-child(2) {
-  margin: 20px;
-}
-
-.details__sub-img:last-child {
-  margin: 0px 20px;
-} */
-
 /* --------------- hết.details__img-area --------------- */
 
 
@@ -86,6 +78,7 @@ section {
 .sale-text {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .old-price {
@@ -105,22 +98,24 @@ section {
 
 .summary__btn-wrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  max-width: 300px;
+  margin: 20px auto 40px auto;
+
 }
 
 .summary__btn {
-  width: 150px;
-  font-size: 14px;
+  width: 140px;
+  font-size: 13px;
   height: 50px;
-  
+  margin: 0px;
 }
 
 .summary__btn:first-child {
   background-color: #3c96eae8;
   color: white;
-  margin: 30px 0px 20px 0px;
+
 }
 
 .summary__btn:first-child:hover {
@@ -130,7 +125,7 @@ section {
 .summary__btn:last-child {
   background-color: #99DE7F;
   color: rgb(0, 0, 0);
-  margin-bottom: 30px;
+
 }
 
 .summary__btn:last-child:hover {
@@ -154,3 +149,177 @@ section {
 }
 
 /* --------------- hết.details__summary --------------- */
+
+
+/* --------------- details__offers --------------- */
+.offers__gift {
+  width: 100%;
+  max-width: 300px;
+  margin: auto;
+}
+
+.gift-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px 0px 40px 0px;
+  border: 1px solid #A8A8A8;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+  padding: 15px;
+  width: 100%;
+}
+
+.gift-img {
+  max-width: 70px;
+}
+
+.special__list {
+  margin: 15px auto;
+}
+
+.offers__btn {
+  font-size: 14px;
+  background-color: #DE847F;
+  height: 50px;
+  color: white;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.offers__btn:hover {
+  background-color: #d15953;
+  color: white;
+}
+
+.offers__contact {
+  font-weight: bold;
+  margin-top: 15px;
+}
+
+/* --------------- hết details__offers --------------- */
+
+
+
+/* --------------- details__main-info --------------- */
+/* ----- main-info: chung ----- */
+.main-info__toggler {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 20px;
+  background-color: #C4C4C4;
+  height: 35px;
+}
+
+.main-info__toggler-indicator {
+  font-size: 16px;
+  line-height: 16px;
+}
+
+.main-info__inner-header {
+  font-size: 14px;
+  font-weight: bold;
+  margin: 35px 0px 15px 0px;
+}
+
+#intro .main-info__inner-header:first-child {
+  margin-top: 15px;
+}
+
+.main-info__content {
+  padding-bottom: 40px;
+}
+
+#intro img {
+  margin-bottom: 15px;
+}
+
+/* ----- main-info: specs ----- */
+
+
+.category__row {
+  border-bottom: 1px solid #CDCDCD;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0px;
+}
+
+.category__key {
+  width: 40%;
+}
+
+.category__value {
+  width: calc(60% - 15px);
+}
+
+/* ----- main-info: review ----- */
+.review__img {
+  margin: 35px 0px 15px 0px;
+} 
+
+.author, .time {
+  font-size: 10px;
+} 
+
+.time i {
+  margin: 0px 5px 0px 3px;
+}
+
+.review__sub-preview {
+  margin: 15px 0px;
+}
+
+/* ----- main-info: sample ----- */
+
+#sample .modal-dialog {
+  max-width: none;
+} 
+
+#sample .modal-content {
+  margin: auto;
+  width: calc(100% - 20px);
+}
+
+#sample .close {
+  width: 35px;
+  height: 35px;
+  font-size: 35px;
+  background-color: rgba(225, 225, 225, 0.5);
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+
+/* --------------- hết details__main-info --------------- */
+
+@media only screen and (min-width: 576px) {
+  #sample .modal-content {
+    margin: auto;
+    width: calc(100% - 60px);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+
+}
+
+@media only screen and (min-width: 992px) {
+
+}
+
+@media only screen and (min-width: 1200px) {
+  #sample .modal-dialog {
+    max-width: none;
+    width: calc(90vh * 1.5);
+  } 
+  
+  #sample .modal-content {
+    height: 90vh;
+    margin: auto;
+  }
+
+  #sample .modal-content img {
+    height: 100%;
+  }
+}
