--- a/halo/template/parts/logreg.pug
+++ b/halo/template/parts/logreg.pug
@@ -57,9 +57,9 @@
             img.platform__img(src="img/img--misc/logo-apple.png", alt="")
 
       .modal-footer
-        a.logreg-portal.mx-auto.reg(href="#" onclick="logregSwitch()") Quay lại đăng nhập
+        a.logreg-portal.mx-auto.reg(onclick="logregSwitch()") Quay lại đăng nhập
         p.mx-auto.log
           | Chưa có tài khoản? 
-          a.logreg-portal(href="#" onclick="logregSwitch()") Đăng ký ngay 
+          a.logreg-portal(onclick="logregSwitch()") Đăng ký ngay 
 
         
