--- a/halo/css/index.css
+++ b/halo/css/index.css
@@ -315,7 +315,8 @@ Carousel map:
 
 /* ---------- connection styles ----------*/
 .connection__form {
-  margin: 10px 0px 30px 0px;
+  margin: 10px auto 30px auto;
+  max-width: 400px;
 }
 
 .connection__input {
@@ -323,6 +324,7 @@ Carousel map:
   max-width: 280px;
   margin-right: 20px;
   border: none;
+  border-radius: 8px;
 }
 
 .connection__socials {
@@ -689,6 +691,14 @@ Carousel map:
 
   .intro--lens .intro__text {
     order: 2;
+  }
+
+  .policy__text {
+    font-size: 17px;
+  }
+
+  .connection__submit-btn {
+    margin: 0px;
   }
 
 }
