--- a/halo/css/camera-hub.css
+++ b/halo/css/camera-hub.css
@@ -29,8 +29,8 @@ section {
 .portal {
   width: 100%;
   position: relative;
-  padding-top: 50px !important;
-  padding-bottom: 0px !important;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .section__header {
