--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -22,9 +22,14 @@ block content
     h1.details__header.w-100.text-left Máy ảnh DSLR 
       span.logo-canon Canon 
       | 1DX Mark III 
+    .details__review-score.w-100
+      h2.score--user.font-weight-bold.text-left Người dùng đánh giá: 
+        span x / 5
+      h2.score--shop.font-weight-bold.text-left HALO đánh giá: 
+        span x / 5
 
     section.details__img-area
-      .details__main-img
+      img(src="img/img--details/detail__main-img-1.jpg", alt="").details__main-img
       .details__sub-img-area
         img.details__sub-img(src="img/img--details/detail__main-img-1.jpg", alt="")  
         img.details__sub-img(src="img/img--details/detail__sub-img-1.jpg", alt="") 
@@ -32,11 +37,13 @@ block content
         img.details__sub-img(src="img/img--details/detail__sub-img-3.jpg", alt="") 
         img.details__sub-img(src="img/img--details/detail__sub-img-4.jpg", alt="")
         img.details__sub-img(src="img/img--details/detail__sub-img-5.jpg", alt="")
-      .details__review-score
-        h2.score--user Người dùng đánh giá: 
-          span x / 5
-        h2.score--shop HALO đánh giá: 
-          span x / 5
+
+
+      #main-img--full-size.modal.fade
+        .modal-dialog.modal-dialog-centered
+          .modal-content
+            button.close(type='button' data-dismiss='modal') &times;
+            img(src="img/img--details/sample-1.png", alt="")
 
     section.details__summary
       .summary__basic
@@ -54,12 +61,12 @@ block content
           a.text-primary.font-italic(href="#") (xem chi tiết)
         p.summary__text Canon EOS 1D X Mark III mang đến chuẩn mực cao nhất cho dòng máy ảnh DSLR full-frame. Cho tới hiện tại, đây là chiếc máy ảnh hàng đầu và đẳng cấp nhất của Canon.
 
-        p.price 130.090.000đ
-        p.sale-text
-          span.old-price 138.090.000đ
-          span.sale-badge
+        p.details__price 130.090.000đ
+        p.details__sale-text
+          span.details__old-price 138.090.000đ
+          span.details__sale-badge
             img(src="img/img--misc/badge--sale.png", alt="")
-          span.sale-amount (Giảm 8.000.000đ)
+          span.details__sale-amount (Giảm 8.000.000đ)
 
         .summary__btn-wrapper
           button.summary__btn.btn Mua ngay      
@@ -77,7 +84,9 @@ block content
     section.details__offers 
     
       .offers__gift
-        h2.details__sub-header Quà tặng (Tổng giá trị 900.000đ)
+        h2.details__sub-header Quà tặng 
+          br 
+          span.font-14.font-italic.font-weight-normal (Tổng giá trị 900.000đ)
         .gift-wrapper 
           img.gift-img(src="img/img--details/gift-img-2.jpg", alt="")
           img.gift-img(src="img/img--details/gift-img-2.jpg", alt="")
@@ -125,7 +134,7 @@ block content
 
         h3.main-info__inner-header Tốc độ đỉnh cao
 
-        img(src="img/img--details/intro-img-4.png", alt="")
+        img(src="img/img--details/intro-img-4.jpg", alt="")
 
         p Tốc độ chụp nhanh của Burst Shooting mang đến cơ hội cao hơn cho các nhiếp ảnh gia chuyên nghiệp để ghi lại khoảnh khắc chính xác với bố cục hoàn hảo. Máy ảnh EOS-1D X Mark III có tốc độ chụp ấn tượng lên tới 16 khung hình / giây bằng kính ngắm, đồng bộ với hệ thống AF / AE mới được phát triển để đáp ứng nhanh về lấy nét tự động chính xác và kiểm soát phơi sáng trong mọi lần chụp quyết định.
 
@@ -220,7 +229,7 @@ block content
           i.fas.fa-chevron-up
 
       #review.main-info__content.collapse.show
-        img.review__img.d-block(src="img/img--details/review-img.webp", alt="")
+        img.review__img.d-block(src="img/img--details/review-img.jpg", alt="")
         .review__content
           h1.review__header.text-left Canon 1DX Mark III: Vua của các vị vua
           .review__sub-header 
@@ -229,7 +238,7 @@ block content
               i.far.fa-clock
               | 01/01/2021
 
-          p.review__sub-preview Thị trường có rất nhiều máy ảnh DSLR từ các hãng lớn như Nikon, Canon, Sony, ...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.
+          p.review__sub-preview 1DX mark III không chỉ mang lại sự phấn khích với thiết bị công nghệ cao, mà còn là niềm cảm hứng bất tận khi tác nghiệp. Đây là camera có độ ổn định cao nhất thế giới: dù là ra chiến trường, leo đỉnh Everest hay đơn thuần là chụp người thương, bạn sẽ luôn thấy an tâm là sẽ có những tấm ảnh chất lượng và tối ưu nhất.
           button.review__btn.btn--dark.btn Xem chi tiết
 
       .main-info__toggler(data-toggle="collapse" data-target="#sample")
@@ -250,10 +259,7 @@ block content
           .card
             img(src="img/img--details/sample-2.png", alt="" data-toggle="modal" data-target="#sample--full-size")
           .card
-            img(src="img/img--details/sample-3.png", alt="" data-toggle="modal" data-target="#sample--full-size")
-          .card
-            img(src="img/img--details/sample-1.png", alt="" 
-            data-toggle="modal" data-target="#sample--full-size") 
+            img(src="img/img--details/sample-3.png", alt="" data-toggle="modal" data-target="#sample--full-size") 
 
         #sample--full-size.modal.fade
           .modal-dialog.modal-dialog-centered
@@ -268,11 +274,65 @@ block content
 
       #comment.main-info__content.collapse.show
         form.comment__form(action="")
-          input.comment__input(type="text" placeholder="Nhập bình luận (cần đăng nhập)")
-          button.comment__btn.btn(type="submit")
+          input.comment__input(type="text" placeholder="Nhập bình luận (cần đăng nhập)" disabled)
+          button.comment__btn.btn.connection__submit-btn.btn-primary(type="submit" disabled) Gửi
 
-        .comment__old-comment 
 
+        .comment__old-comment.media
+          img.avatar.rounded-circle(src='img/img--details/avatar-1.jpg' alt='')
+          .old-comment__content.media-body
+            h3.details__sub-header
+              | Đánh giá: 
+              span.mr-auto.ml-2 x / 5
+              small.font-italic
+                i.far.fa-clock
+                |  01/01/2021
+            h3.username.details__sub-header Harry "Styles" Potter
+            p.comment-text Sản phẩm tốt mà lại rẻ, ai cũng nên mua 2 3 cái chụp hoa cỏ chó mèo.
+            p.reply-report 
+              a.replyToggler.disabled(href="#") 
+                i.fas.fa-reply.mr-3
+                | Trả lời
+              a.reportToggler(href="#")
+                i.fas.fa-flag.mr-3
+                | Báo cáo
+        .comment__old-comment.reply.media
+          img.avatar.rounded-circle(src='img/img--details/avatar-2.png' alt='')
+          .old-comment__content.media-body
+            h3.details__sub-header
+              | Đánh giá: 
+              span.mr-auto.ml-2 x / 5
+              small.font-italic
+                i.far.fa-clock
+                |  01/01/2021
+            h3.username.details__sub-header Meme Lót
+            p.comment-text Tin gì quả seeder này các bạn ơi
+            p.reply-report 
+              a.replyToggler(href="#") 
+                i.fas.fa-reply.mr-3
+                | Trả lời
+              a.reportToggler(href="#")
+                i.fas.fa-flag.mr-3
+                | Báo cáo
+        .comment__old-comment.media
+          img.avatar.rounded-circle(src='img/img--details/avatar-3.jpg' alt='')
+          .old-comment__content.media-body
+            h3.details__sub-header
+              | Đánh giá: 
+              span.mr-auto.ml-2 x / 5
+              small.font-italic
+                i.far.fa-clock
+                |  01/01/2021
+            h3.username.details__sub-header Mr. Steal your girl
+            p.comment-text Hàng đẹp y hình, quay tiktok uy tín luôn.
+            p.reply-report 
+              a.replyToggler(href="#") 
+                i.fas.fa-reply.mr-3
+                | Trả lời
+              a.reportToggler(href="#")
+                i.fas.fa-flag.mr-3
+                | Báo cáo
+        //.comment__old-comment 
           .old-comment__row 
             img.old-commen_avatar(src="img/img--details/avatar.png", alt="") 
             .old-comment__content
