--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -1,5 +1,5 @@
 
-#main-carousel.carousel.slide(data-ride='carousel' data-interval='false' data-touch="true")
+#main-carousel.carousel.slide(data-ride='carousel' data-interval='3500' data-touch="true")
 
   //indicators: 3 nút định vị trang
   ul.carousel-indicators
