--- a/halo/template/cart.pug
+++ b/halo/template/cart.pug
@@ -79,8 +79,8 @@ block content
       h1.cart__grand-total.w-100 Tổng giá trị giỏ hàng: 
 
     .cart__btn-group
-      button.btn.cart__continue-buying Tiếp tục mua hàng 
-      button.btn.cart__payment Thanh toán ngay 
+      a.btn.cart__continue-buying(href="camera-hub.html") Tiếp tục mua hàng 
+      a.btn.cart__payment(href="payment.html") Thanh toán ngay 
 
 
 
