--- a/halo/css/details.css
+++ b/halo/css/details.css
@@ -774,7 +774,9 @@ section {
 
   .summary__btn {
     width: 140px;
-    font-size: 13px;
+    font-size: 14px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
   .details__offers {
