--- a/halo/css/payment.css
+++ b/halo/css/payment.css
@@ -1,23 +1,100 @@
 
 section {
-  padding: 30px 0px;
+  padding: 25px 0px;
 }
 
-#payment-card {
+.sub-section {
+  max-width: 340px;
+  margin: auto;
+}
+
+.main-header {
+  font-size: 16px;
+  background-color: #C4C4C4;
+  padding-left: 10px;
+  font-weight: bold;
+}
+
+.sub-header {
+  font-size: 14px;
+  margin: 10px auto;
+  font-weight: bold;
+}
+
+.inner-header {
+  font-weight: bold;
+}
+
+.summary__row--right,
+.summary__row--left {
+  width: 47%;
+}
+
+.summary__row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  padding-bottom: 2px;
+}
+
+.summary__row:nth-child(3),
+.summary__row:nth-child(4) {
+  border-bottom: 1px solid #777777;
+}
+
+.coupon__input {
+  padding-left: 5px;
+  width: 80px;
+}
+
+.coupon__content {
+  display: none;
+}
+
+.coupon__text:first-child {
+  font-size: 10px;
+  font-style: italic;
+  margin: 5px 0px 5px 0px;
+}
+
+.guess__info * {
+  margin-bottom: 10px;
+  border-radius: 8px;
+  resize: none;
+}
+
+.method__toggler {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.method__toggler label {
+  margin: 2px 0px 0px 5px;
+}
+
+.method__content {
+  margin: 5px auto 20px auto;
+}
+
+#payment__method .sub-header {
+  margin-top: 50px;
+}
+
+
+
+
+
+.payment-card__content  {
+  perspective: 1000px;
+  background-color: transparent;
+  border-radius: 12px;
+  color: #fff;
+  position: relative;
   width: 100%;
   max-width: 350px;
   height: calc(63vw - 30px);
   max-height: 220px;
-  color: #fff;
-  border-radius: 12px;
-  perspective: 1000px;
-  background-color: transparent;
-}
-
-.payment-card__content  {
-  position: relative;
-  width: 100%;
-  height: 100%;
   transition: transform 0.8s;
   transform-style: preserve-3d;
   border-top: 1px solid rgba(255, 255, 255, 0.4);
@@ -32,7 +109,7 @@ section {
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
   border-radius: 12px;
-  background-image: url("../img/img--payment/cardback-1.png");
+  background-image: url("../img/img--carousel/banner-bg-1-min.jpg");
   background-size: contain;
   background-position: center;
   backdrop-filter: blur(20px);
@@ -143,16 +220,15 @@ section {
   width: 100%;
 }
 
-#input__month,
-#input__year {
+.input__month,
+.input__year,
+#visa-master-input__cvv {
   width: 60px;
   padding-left: 10px;
-  font-size: 14px;
 }
 
 .input__dates span {
   font-size: 18px;
-  
 }
 
 
