--- a/halo/template/payment.pug
+++ b/halo/template/payment.pug
@@ -21,81 +21,100 @@ block content
 
     h1.text-left.w-100 Cổng thanh toán
     
-    //section.confirmation-wrapper
+    section.confirmation-wrapper
 
       .main-header
-        span.toggler__header 1. Xác nhận đơn hàng
-        span.toggler__indicator
-          i.fas.fa-chevron-up
+        span.main-header__text 1. Xác nhận đơn hàng
+        span.main-header__indicator
 
       #confirmation
 
-        .summary.sub-section
+        .confirmation__summary.sub-section
           h2.sub-header Tóm tắt đơn hàng
 
-          .summary__row--header
-            span.inner-header__label Giỏ hàng
+          p.summary__row.summary__row--right.inner-header Giỏ hàng
 
-          p.summary__row--text
-            span Máy ảnh Canon 1DX Mark III 
-            span 1 x 130.090.000đ = 130.090.000đ
+          p.summary__row
+            span.summary__row--right Máy ảnh Canon 1DX Mark III 
+            span.summary__row--left 1 x 130.090.000đ = 130.090.000đ
 
-          p.summary__row--text
-            span Máy ảnh Canon 1DX Mark III 
-            span 2 x 130.090.000đ = 260.180.000đ
+          p.summary__row
+            span.summary__row--right Máy ảnh Canon 1DX Mark III 
+            span.summary__row--left 2 x 130.090.000đ = 260.180.000đ
 
-          p.summary__row--text
-            span Tổng giá trị giỏ hàng 
-            span 390.270.000đ
+          p.summary__row
+            span.summary__row--right.inner-header Tổng giá trị giỏ hàng 
+            span.summary__row--left 390.270.000đ
 
-          .summary__row--header
-            span.inner-header__label Phí vận chuyển:
-            span.inner-header__content Miễn phí vận chuyển
+          .summary__row
+            span.summary__row--right.inner-header Phí vận chuyển:
+            span.summary__row--left Miễn phí vận chuyển
 
-          .summary__row--header
-            span.inner-header__label Mã giảm giá:
-            .inner-header__content.coupon
-              input.coupon__input(type="text" placeholder="Nhập mã")
-              button.btn.coupon__submit Xác nhận
+          .summary__row
+            span.summary__row--right.inner-header Mã giảm giá:
+            .summary__row--left.coupon
+              input.coupon__input(type="text" placeholder="KM2021")
               .coupon__content
                 p.coupon__text Giảm 15% giá trị đơn hàng (tối đa 1.000.000đ)
                 p.coupon__text -1.000.000đ
 
-          p.summary__grand-total Tổng tiền hàng: 
-            span 389.270.000đ      
+          p.summary__grand-total.inner-header.text-center.my-4 Tổng tiền hàng: 
+            span 390.270.000đ
         
-        .term.sub-section
+        p Khi bấm xác nhận, quý khách đã đồng ý với 
+          span.term-toggler.text-primary.font-italic(data-toggle="collapse" data-target="#term") các điều khoản đặt hàng và thanh toán của chúng tôi.
 
-        a.btn.btn--confirmation.payment__toggler(href="#" data-toggle="collapse" data-target="#payment__info") Xác nhận
+        .confirmation__term#term.sub-section.collapse 
+          h2.sub-header Điều khoản đặt hàng và thanh toán
+          p 1. Quý khách hàng vui lòng cung cấp địa chỉ giao hàng cũng như thông tin người nhận rõ ràng, chính xác để công tác giao hàng được nhanh nhất.
+
+          p 2. Quý khách hàng kiểm tra hàng hóa kỹ lưỡng, cẩn thận trước khi ký nhận và thanh toán.
+
+          p 3. Nếu quá thời gian quy định, Quý khách hàng vẫn chưa nhận được sản phẩm, hãy liên lạc ngay với chúng tôi để được hỗ trợ.
+
+          p 4. Trường hợp Quý khách hàng thay đổi quyết định mua hàng khi sản phẩm đã được giao, khách hàng sẽ phải chịu hoàn toàn chi phí vận chuyển.
+
+        a.btn.btn--confirmation.payment__toggler.mt-4(href="#" data-toggle="collapse" data-target="#payment__info") Xác nhận
 
     section.payment-wrapper
 
       .main-header
-        span.toggler__header 2. Thanh toán
-        span.toggler__indicator
-          i.fas.fa-chevron-up
+        span.main-header__text 2. Thanh toán
+        span.main-header__indicator
 
       #payment
         #payment__info.sub-section.collapse
           h2.sub-header Thông tin khách hàng
 
-          form
-            input.form-control(type="text" placeholder="Họ tên")
-            input.form-control(type="text" placeholder="Số điện thoại")
-            input.form-control(type="text" placeholder="Địa chỉ nhận hàng")
-            textarea.form-control(name="" cols="20" rows="10")
+          form.guess__info
+            input.guess__info--name.form-control(type="text" placeholder="Họ tên")
+            input.guess__info--phone.form-control(type="text" placeholder="Số điện thoại")
+            input.guess__info--address.form-control(type="text" placeholder="Địa chỉ nhận hàng")
+            textarea.guess__info--note.form-control(name="" cols="20" rows="10" placeholder="Ghi chú")
 
           a.btn.btn--confirmation.payment__toggler(href="#" data-toggle="collapse" data-target="#payment__method") Xác nhận 
 
-        #payment__method.sub-section.collapse.show
+        #payment__method.sub-section.collapse
           h2.sub-header Phương thức thanh toán
 
-          .method__toggler(data-toggle="collapse" data-target="#payment-card") 
-            input(type="radio", name="payment-method", id="domestic-card-radio")
-            label(for="domestic-card-radio") Thanh toán bằng thẻ ngân hàng nội địa 
+          form#methods-selection
 
-          include parts/payment-card.pug
-        
+            #method-wrapper
+
+              .method__toggler(data-toggle="collapse" data-target="#domestic-card") 
+                input(type="radio" name="payment-method", id="domestic-card-radio" form="methods-selection")
+                label(for="domestic-card-radio") Thanh toán bằng thẻ ngân hàng nội địa 
+
+              #domestic-card.method__content.collapse(data-parent="#methods-selection")
+                include parts/domestic-card.pug
+
+              .method__toggler(data-toggle="collapse" data-target="#visa-master-card") 
+                input(type="radio" name="payment-method", id="visa-master-card-radio" form="methods-selection")
+                label(for="visa-master-card-radio") Thanh toán bằng thẻ Visa/Master
+
+              #visa-master-card.method__content.collapse(data-parent="#methods-selection")
+                include parts/visa-master-card.pug
+         
 
 
 
