--- a/halo/template/payment.pug
+++ b/halo/template/payment.pug
@@ -32,27 +32,27 @@ block content
         .confirmation__summary.sub-section
           h2.sub-header Tóm tắt đơn hàng
 
-          p.summary__row.summary__row--right.inner-header Giỏ hàng
+          p.summary__row.summary__row--left.inner-header Giỏ hàng
 
           p.summary__row
-            span.summary__row--right Máy ảnh Canon 1DX Mark III 
-            span.summary__row--left 1 x 130.090.000đ = 130.090.000đ
+            span.summary__row--left Máy ảnh Canon 1DX Mark III 
+            span.summary__row--right 1 x 130.090.000đ = 130.090.000đ
 
           p.summary__row
-            span.summary__row--right Máy ảnh Canon 1DX Mark III 
-            span.summary__row--left 2 x 130.090.000đ = 260.180.000đ
+            span.summary__row--left Máy ảnh Canon 1DX Mark III 
+            span.summary__row--right 2 x 130.090.000đ = 260.180.000đ
 
           p.summary__row
-            span.summary__row--right.inner-header Tổng giá trị giỏ hàng 
-            span.summary__row--left 390.270.000đ
+            span.summary__row--left.inner-header Tổng giá trị giỏ hàng 
+            span.summary__row--right 390.270.000đ
 
           .summary__row
-            span.summary__row--right.inner-header Phí vận chuyển:
-            span.summary__row--left Miễn phí vận chuyển
+            span.summary__row--left.inner-header Phí vận chuyển:
+            span.summary__row--right Miễn phí vận chuyển
 
           .summary__row
-            span.summary__row--right.inner-header Mã giảm giá:
-            .summary__row--left.coupon
+            span.summary__row--left.inner-header Mã giảm giá:
+            .summary__row--right.coupon
               input.coupon__input(type="text" placeholder="KM2021")
               .coupon__content
                 p.coupon__text Giảm 15% giá trị đơn hàng (tối đa 1.000.000đ)
