--- a/halo/template/payment.pug
+++ b/halo/template/payment.pug
@@ -61,7 +61,7 @@ block content
           p.summary__grand-total.inner-header.text-center.my-4 Tổng tiền hàng: 
             span 390.270.000đ
         
-        p Khi bấm xác nhận, quý khách đã đồng ý với 
+        p.text-center Khi bấm xác nhận, quý khách đã đồng ý với 
           span.term-toggler.text-primary.font-italic(data-toggle="collapse" data-target="#term") các điều khoản đặt hàng và thanh toán của chúng tôi.
 
         .confirmation__term#term.sub-section.collapse 
