--- a/halo/css/payment.css
+++ b/halo/css/payment.css
@@ -239,11 +239,43 @@ section {
   .summary__row--left {
     width: 55%;
   }
-
   .summary__row--right {
     width: 45%;
   }
-
 }
 
+@media only screen and (min-width: 768px) {
+  .sub-section {
+    border: 1px solid #000000;
+    border-radius: 16px;
+    padding: 5px 15px;
+    margin: 20px 0px;
+    width: 340px;
+  }
 
+  #confirmation, #payment {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .term-toggler__wrapper {
+    order: 3;
+    width: 100%;
+  }
+
+  .payment__toggler {
+    order: 4;
+  }
+
+  .confirmation__term p {
+    margin-bottom: 5px;
+  }
+
+  #payment__method .sub-header {
+    margin-top: 10px;
+  }
+
+
+}
